--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,5 +31,5 @@ jobs:
     - name: Build
       run: npm run build
     - name: Test
-      run: npm run test
+      run: npm run test:prod
     - run: npm run lint
