--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Build
-      run: npm run build
+      run: npm run build:prod
     - name: Test
       run: npm run test:prod
     - run: npm run lint
