--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,3 +33,10 @@ jobs:
     - name: Test
       run: npm run test:prod
     - run: npm run lint
+    - name: Deploy to GitHub Pages
+      uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2
+      with:
+        github_access_token: ${{ secrets.ACCESS_TOKEN }}
+        base_href: /KMSToDo/
+        deploy_branch: gh-pages
+        angular_dist_build_folder: dist/todoKMS
