--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,4 +39,4 @@ jobs:
         github_access_token: ${{ secrets.ACCESS_TOKEN }}
         base_href: /KMSToDo/
         deploy_branch: gh-pages
-        angular_dist_build_folder: dist/todoKMS
+        angular_dist_build_folder: dist/cargonaut
