--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,6 +37,6 @@ jobs:
       uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2
       with:
         github_access_token: ${{ secrets.ACCESS_TOKEN }}
-        base_href: /KMSToDo/
+        base_href: /Cargonaut/
         deploy_branch: gh-pages
         angular_dist_build_folder: dist/cargonaut
