--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,6 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v2
@@ -31,8 +30,12 @@ jobs:
     - name: Build
       run: npm run build
     #- name: Test
-     # run: npm run test:prod
+     # run: npm run test:prod    ++Tests are still not running properly
     - run: npm run lint
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - name: Deploy to GitHub Pages
       uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2
       with:
