--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
       - name: Repo Checkout
         uses: actions/checkout@v2
-      - run: cd Cargonaut && npm ci && npm run build
+      - run: npm ci && npm run build
       - uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2
         with:
           github_access_token: ${{ secrets.ACCESS_TOKEN }}
