started e2e tests with cypress and added to project

--- a/angular.json
+++ b/angular.json
@@ -112,6 +112,37 @@
               "src/**/*.html"
             ]
           }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "Cargonaut:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "Cargonaut:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false
+          }
+        },
+        "e2e": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "Cargonaut:serve",
+            "watch": true,
+            "headless": false
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "Cargonaut:serve:production"
+            }
+          }
         }
       }
     }
