--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test:prod": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "e2e": "ng e2e",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "cypress-run-headless": "cypress run --headless --browser chrome",
+    "start-server:ci": "angular-http-server --path ./dist/myCargonaut -p 4200",
+    "run-e2e-tests": "start-server-and-test start-server:ci 4200 cypress-run-headless"
   },
   "private": true,
   "dependencies": {
