--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,14 +31,8 @@ jobs:
       run: npm run build
     - run: npm i start-server-and-test
     - run: npm i angular-http-server
-    - run : npm install cypress --save-dev
-    #- run : npx cypress verify
-    - name: cypress-run-headless
-      run: cypress run --headless --browser chrome
-    - name: start-server:ci
-      run: angular-http-server --path ./dist/myCargonaut -p 4200
-    - name: run-tests
-      run: start-server-and-test start-server:ci 4200 cypress-run-headless
+    - name: e2e Tests
+    - run: npm run run-e2e-tests
     #- name: Test
      # run: npm run test:prod    ++Tests are still not running properly with firebase
     - run: npm run lint
