--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,7 @@ jobs:
     - run: npm i start-server-and-test
     - run: npm i angular-http-server
     - name: e2e Tests
-    - run: npm run run-e2e-tests
+      run: npm run run-e2e-tests
     #- name: Test
      # run: npm run test:prod    ++Tests are still not running properly with firebase
     - run: npm run lint
