--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
+    "cypress": "^9.2.0",
     "eslint": "^7.26.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
@@ -58,7 +59,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-mocks": "^12.5.1",
-    "typescript": "~4.3.5",
-    "cypress": "latest"
+    "typescript": "~4.3.5"
   }
 }
