--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,8 +36,9 @@ jobs:
     #- name: Test
      # run: npm run test:prod    ++Tests are still not running properly with firebase
     - run: npm run lint
-    
+
   Deployment:
+    if: (github.ref == 'refs/heads/master')
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -50,7 +51,7 @@ jobs:
           base_href: /Cargonaut/
           deploy_branch: gh-pages
           angular_dist_build_folder: dist/Cargonaut
-        
+
   code-analyzis:
       runs-on: ubuntu-latest
       steps:
@@ -59,4 +60,4 @@ jobs:
           run: curl -L "https://get.spectralops.io/latest/x/sh?dsn=$SPECTRAL_DSN" | sh
         - name: Scan
           run: $HOME/.spectral/spectral scan --ok
-      
+
